--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,8 @@ header .navbar{
 header .navbar nav{
     width: 50%;
     margin: auto;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    box-shadow: 0px 0px 10px 0px black;
     padding: 1.5vw;
     border-radius: 9px;
     background: rgba(255, 255, 255, 0.2);
